<resources>
    <string name="app_name">interviews</string>

    <string name="label_years">Years</string>
    <string name="label_pending">Pending</string>
    <string name="label_selected">Selected</string>
    <string name="label_rejected">Rejected</string>
    <string name="label_hold">Hold</string>
    <string name="label_cancelled">Cancelled</string>
    <string name="label_hr_managers">HR Managers</string>
    <string name="label_interviewers">Interviewers</string>
    <string name="label_candidate_name">Candidate name</string>
    <string name="label_experience_years">Experience (Years)</string>
    <string name="label_interview_date">Interview date</string>
    <string name="label_hr_manager">HR Manager</string>
    <string name="label_interviewer">Interviewer</string>
    <string name="label_interview_comments">Interview comments</string>
    <string name="label_practical_comments">Practical comments</string>
    <string name="label_practical_link">Practical link</string>
    <string name="label_select_interviewer">Select interviewer</string>
    <string name="label_select_manager">Select manager</string>
    <string name="label_select_result">Select result</string>
    <string name="label_not_available">N/A</string>
    <string name="label_add_interviewer">Add interviewer</string>
    <string name="label_add_manager">Add manager</string>

    <string name="screen_title_interviews">Interviews</string>
    <string name="screen_title_settings">Settings</string>
    <string name="screen_title_hr_managers">@string/label_hr_managers</string>
    <string name="screen_title_interviewers">@string/label_interviewers</string>
    <string name="screen_title_add_interview">Add interview</string>
    <string name="screen_title_edit_interview">Edit interview</string>

    <string name="button_add_new">Add new</string>
    <string name="button_add">Add</string>
    <string name="button_update">Update</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>

    <string name="hint_search">Search…</string>

    <string name="menu_filters">Filters</string>
    <string name="menu_settings">Settings</string>

    <string name="validation_candidate_name_empty">Please enter candidate name</string>
    <string name="validation_experience_empty">Please enter experience</string>
    <string name="validation_select_interview_date">Please select interview date</string>
    <string name="validation_select_manager">Please select HR manager</string>
    <string name="validation_select_interviewer">Please select interviewer</string>
    <string name="validation_interviewer_name_empty">Please enter interviewer name</string>
    <string name="validation_manager_name_empty">Please enter manager name</string>

    <string name="dialog_delete_interview_title">Delete interview</string>
    <string name="dialog_delete_interview_message">Are you sure you want to delete this interview?</string>
    <string name="dialog_delete_interviewer_title">Delete interviewer</string>
    <string name="dialog_delete_interviewer_message">Are you sure you want to delete this interviewer?</string>
    <string name="dialog_delete_manager_title">Delete manager</string>
    <string name="dialog_delete_manager_message">Are you sure you want to delete this manager?</string>

    <string name="alert_message_interview_added">Interview added</string>
    <string name="alert_message_interview_updated">Interview updated</string>

</resources>