<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewToolbarTitle"
                style="@style/Text.ToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_title_settings" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewManagers"
        style="@style/Text.SettingsItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_hr_managers" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewInterviewers"
        style="@style/Text.SettingsItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_interviewers" />

</androidx.appcompat.widget.LinearLayoutCompat>